unpackaged/main/default/objects/AAA_Insurance__c/AAA_Insurance__c.object-meta.xml
<CustomObject>
    <label>AAA Insurance</label>
    <nameField>
        <label>AAA Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AAA Insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>