unpackaged/main/default/objects/AAA_Insurance__c/fields/Cancellation_Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_Type__c</fullName>
    <label>Cancellation Reason Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coverage Placed Elsewhere</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Underwriting Reasons</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>