unpackaged/main/default/objects/AAA_Insurance__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>