unpackaged/main/default/objects/AAA_Insurance__c/fields/Last_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verification_Date__c</fullName>
    <label>Last Verification Date</label>
    <type>Date</type>
</CustomField>