unpackaged/main/default/objects/AAA_Insurance__c/fields/Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Name__c</fullName>
    <label>Policy Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>