unpackaged/main/default/objects/AAA_Insurance__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Producer</referenceTo>
    <relationshipLabel>AAA Insurance</relationshipLabel>
    <relationshipName>AAA_Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>