unpackaged/main/default/objects/AAA_Insurance__c/fields/Type_of_Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Insurance_Coverage__c</fullName>
    <label>Type of Insurance Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Towing Provider</fullName>
            </value>
            <value>
                <fullName>Light Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>